[gd_scene load_steps=53 format=2]

[ext_resource path="res://assets/scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/meshes/letniskowiec.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://assets/sprites/grass_field.png" type="Texture" id=3]
[ext_resource path="res://assets/scripts/camp.gd" type="Script" id=4]
[ext_resource path="res://assets/meshes/tree.mesh" type="ArrayMesh" id=5]
[ext_resource path="res://assets/scenes/cursor.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/scenes/helicopter.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/scripts/camera_pivot.gd" type="Script" id=8]
[ext_resource path="res://assets/materials/spyglass_v.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/compass.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/home.png" type="Texture" id=11]
[ext_resource path="res://assets/scenes/hit.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/materials/detailed_noise.tres" type="Texture" id=13]
[ext_resource path="res://assets/scenes/smoke.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/materials/wood.material" type="Material" id=15]
[ext_resource path="res://assets/sprites/white_on_black_SD.png" type="Texture" id=16]
[ext_resource path="res://assets/materials/gradient_l.tres" type="Texture" id=17]

[sub_resource type="SpatialMaterial" id=1]

render_priority = -1
flags_transparent = true
flags_ensure_correct_normals = true
albedo_texture = ExtResource( 3 )
metallic = 0.21
roughness = 0.72

[sub_resource type="PlaneMesh" id=2]

material = SubResource( 1 )
size = Vector2( 5, 3 )

[sub_resource type="SpatialMaterial" id=3]

flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.12549 )
metallic = 1.0

[sub_resource type="CylinderMesh" id=4]

material = SubResource( 3 )
top_radius = 0.8
bottom_radius = 0.8
height = 0.1
radial_segments = 6
rings = 2

[sub_resource type="Animation" id=5]

resource_name = "hrli"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8, 3.4, 4.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -3.3, 0.931, -1 ), Vector3( -3.3, 1.625, -1 ), Vector3( -3.3, 1.516, -1 ), Vector3( -3.3, 1.547, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 2.5, 3.2, 4.5, 5.6, 6.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -111.292, 0 ), Vector3( -6.3, -111.292, 0 ), Vector3( -7.045, -105.372, 0 ), Vector3( 0.962, -94.455, 0 ), Vector3( 2.811, -101.198, 1.9 ), Vector3( 2.881, -106.073, 0 ), Vector3( 2.281, -104.12, -1.96 ) ]
}

[sub_resource type="SpatialMaterial" id=6]

flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 9 )

[sub_resource type="PlaneMesh" id=7]

material = SubResource( 6 )
size = Vector2( 0.5, 0.5 )

[sub_resource type="Gradient" id=8]

colors = PoolColorArray( 0.0293974, 0.116152, 0.129754, 1, 1, 0.832954, 0.488281, 1 )

[sub_resource type="GradientTexture" id=9]

gradient = SubResource( 8 )

[sub_resource type="Environment" id=10]

tonemap_mode = 3
adjustment_enabled = true
adjustment_contrast = 0.89
adjustment_saturation = 0.2
adjustment_color_correction = SubResource( 9 )

[sub_resource type="SpatialMaterial" id=11]

flags_transparent = true
vertex_color_use_as_albedo = true
albedo_texture = ExtResource( 13 )
metallic = 1.0
metallic_specular = 0.0

[sub_resource type="SphereMesh" id=12]

material = SubResource( 11 )
radius = 2.0
height = 4.0
radial_segments = 6
rings = 3

[sub_resource type="CylinderMesh" id=13]

material = ExtResource( 15 )
top_radius = 0.025
bottom_radius = 0.1
height = 2.5

[sub_resource type="VisualShaderNodeInput" id=14]

input_name = "uv"

[sub_resource type="VisualShaderNodeTexture" id=36]

texture = ExtResource( 16 )

[sub_resource type="VisualShaderNodeScalarOp" id=16]

default_input_values = [ 0, 0.0, 1, 32.0 ]
operator = 2

[sub_resource type="VisualShaderNodeTexture" id=17]

texture = ExtResource( 13 )

[sub_resource type="VisualShaderNodeVectorDecompose" id=18]


[sub_resource type="VisualShaderNodeScalarOp" id=19]


[sub_resource type="VisualShaderNodeScalarOp" id=20]


[sub_resource type="VisualShaderNodeTexture" id=21]

texture = ExtResource( 17 )

[sub_resource type="VisualShaderNodeVectorDecompose" id=22]


[sub_resource type="VisualShaderNodeScalarInterp" id=23]

default_input_values = [ 0, 0.0, 1, 0.0, 2, 0.8 ]

[sub_resource type="VisualShaderNodeScalarOp" id=24]

default_input_values = [ 0, 0.0, 1, 0.4 ]
operator = 2

[sub_resource type="VisualShaderNodeInput" id=25]

input_name = "uv"

[sub_resource type="VisualShaderNodeScalarOp" id=26]


[sub_resource type="VisualShaderNodeScalarOp" id=27]

default_input_values = [ 0, 0.0, 1, 1.0 ]
operator = 2

[sub_resource type="VisualShaderNodeInput" id=28]

input_name = "vertex"

[sub_resource type="VisualShaderNodeInput" id=29]

input_name = "time"

[sub_resource type="VisualShaderNodeVectorCompose" id=30]


[sub_resource type="VisualShaderNodeVectorDecompose" id=31]


[sub_resource type="VisualShaderNodeScalarFunc" id=32]

function = 0

[sub_resource type="VisualShader" id=33]

code = "shader_type spatial;
render_mode cull_disabled, unshaded;

uniform sampler2D tex_vtx_13;uniform sampler2D tex_vtx_18;uniform sampler2D tex_frg_3;


void vertex() {
// Input:3
	vec3 n_out3p0;
	n_out3p0 = VERTEX;

// VectorDecompose:6
	float n_out6p0;
	float n_out6p1;
	float n_out6p2;
	n_out6p0 = n_out3p0.x;
	n_out6p1 = n_out3p0.y;
	n_out6p2 = n_out3p0.z;

// Input:4
	float n_out4p0;
	n_out4p0 = TIME;

// ScalarOp:11
	float n_in11p1 = 32.00000;
	float n_out11p0;
	n_out11p0 = n_out4p0 * n_in11p1;

// ScalarOp:25
	float n_out25p0;
	n_out25p0 = n_out6p0 + n_out11p0;

// Input:24
	vec3 n_out24p0;
	n_out24p0 = vec3(UV,0.0);

// Texture:13
	vec3 n_out13p0;
	float n_out13p1;
	vec4 tex_vtx_13_read = texture( tex_vtx_13 , n_out24p0.xy );
	n_out13p0 = tex_vtx_13_read.rgb;
	n_out13p1 = tex_vtx_13_read.a;

// VectorDecompose:14
	float n_out14p0;
	float n_out14p1;
	float n_out14p2;
	n_out14p0 = n_out13p0.x;
	n_out14p1 = n_out13p0.y;
	n_out14p2 = n_out13p0.z;

// ScalarOp:17
	float n_out17p0;
	n_out17p0 = n_out25p0 + n_out14p0;

// ScalarFunc:8
	float n_out8p0;
	n_out8p0 = sin(n_out17p0);

// ScalarOp:23
	float n_in23p1 = 0.40000;
	float n_out23p0;
	n_out23p0 = n_out8p0 * n_in23p1;

// ScalarOp:16
	float n_out16p0;
	n_out16p0 = n_out6p1 + n_out23p0;

// Texture:18
	vec3 n_out18p0;
	float n_out18p1;
	vec4 tex_vtx_18_read = texture( tex_vtx_18 , n_out24p0.xy );
	n_out18p0 = tex_vtx_18_read.rgb;
	n_out18p1 = tex_vtx_18_read.a;

// VectorDecompose:19
	float n_out19p0;
	float n_out19p1;
	float n_out19p2;
	n_out19p0 = n_out18p0.x;
	n_out19p1 = n_out18p0.y;
	n_out19p2 = n_out18p0.z;

// ScalarOp:26
	float n_in26p1 = 1.00000;
	float n_out26p0;
	n_out26p0 = n_out19p0 * n_in26p1;

// ScalarInterp:21
	float n_out21p0;
	n_out21p0 = mix( n_out6p1 , n_out16p0 , n_out26p0 );

// VectorCompose:5
	vec3 n_out5p0;
	n_out5p0 = vec3( n_out6p0 , n_out21p0 , n_out6p2 );

// Output:0
	VERTEX = n_out5p0;

}

void fragment() {
// Input:2
	vec3 n_out2p0;
	n_out2p0 = vec3(UV,0.0);

// Texture:3
	vec3 n_out3p0;
	float n_out3p1;
	vec4 tex_frg_3_read = texture( tex_frg_3 , n_out2p0.xy );
	n_out3p0 = tex_frg_3_read.rgb;
	n_out3p1 = tex_frg_3_read.a;

// Output:0
	ALBEDO = n_out3p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 48, -248 )
modes/cull = 2
flags/unshaded = true
nodes/vertex/0/position = Vector2( 1720, -20 )
nodes/vertex/3/node = SubResource( 28 )
nodes/vertex/3/position = Vector2( -180, 20 )
nodes/vertex/4/node = SubResource( 29 )
nodes/vertex/4/position = Vector2( -160, 140 )
nodes/vertex/5/node = SubResource( 30 )
nodes/vertex/5/position = Vector2( 1480, -20 )
nodes/vertex/6/node = SubResource( 31 )
nodes/vertex/6/position = Vector2( 540, -20 )
nodes/vertex/8/node = SubResource( 32 )
nodes/vertex/8/position = Vector2( 620, 140 )
nodes/vertex/11/node = SubResource( 16 )
nodes/vertex/11/position = Vector2( 60, 100 )
nodes/vertex/13/node = SubResource( 17 )
nodes/vertex/13/position = Vector2( 60, 260 )
nodes/vertex/14/node = SubResource( 18 )
nodes/vertex/14/position = Vector2( 240, 260 )
nodes/vertex/16/node = SubResource( 19 )
nodes/vertex/16/position = Vector2( 1000, 100 )
nodes/vertex/17/node = SubResource( 20 )
nodes/vertex/17/position = Vector2( 440, 140 )
nodes/vertex/18/node = SubResource( 21 )
nodes/vertex/18/position = Vector2( 60, 480 )
nodes/vertex/19/node = SubResource( 22 )
nodes/vertex/19/position = Vector2( 240, 380 )
nodes/vertex/21/node = SubResource( 23 )
nodes/vertex/21/position = Vector2( 1260, 140 )
nodes/vertex/23/node = SubResource( 24 )
nodes/vertex/23/position = Vector2( 800, 120 )
nodes/vertex/24/node = SubResource( 25 )
nodes/vertex/24/position = Vector2( -200, 440 )
nodes/vertex/25/node = SubResource( 26 )
nodes/vertex/25/position = Vector2( 260, 60 )
nodes/vertex/26/node = SubResource( 27 )
nodes/vertex/26/position = Vector2( 620, 300 )
nodes/vertex/connections = PoolIntArray( 3, 0, 6, 0, 5, 0, 0, 0, 4, 0, 11, 0, 13, 0, 14, 0, 6, 2, 5, 2, 6, 0, 5, 0, 6, 1, 16, 0, 18, 0, 19, 0, 21, 0, 5, 1, 6, 1, 21, 0, 16, 0, 21, 1, 23, 0, 16, 1, 24, 0, 18, 0, 24, 0, 13, 0, 11, 0, 25, 1, 6, 0, 25, 0, 8, 0, 23, 0, 25, 0, 17, 0, 14, 0, 17, 1, 17, 0, 8, 0, 19, 0, 26, 0, 26, 0, 21, 2 )
nodes/fragment/0/position = Vector2( 760, -140 )
nodes/fragment/2/node = SubResource( 14 )
nodes/fragment/2/position = Vector2( 260, -60 )
nodes/fragment/3/node = SubResource( 36 )
nodes/fragment/3/position = Vector2( 520, -160 )
nodes/fragment/connections = PoolIntArray( 2, 0, 3, 0, 3, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=34]

shader = SubResource( 33 )

[sub_resource type="PlaneMesh" id=35]

material = SubResource( 34 )
size = Vector2( 1, 1 )
subdivide_width = 32
subdivide_depth = 32

[node name="player" type="Position3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50.729, 0 )
script = ExtResource( 1 )

[node name="carrier" type="MeshInstance" parent="."]
editor/display_folded = true
transform = Transform( -8.74228e-08, 0, -2, 0, 2, 0, 2, 0, -8.74228e-08, -1.92551, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null

[node name="camera_onboard" type="Camera" parent="carrier"]
transform = Transform( -0.484046, -0.315013, 0.816374, 0, 0.932954, 0.359997, -0.875043, 0.174255, -0.451593, 0.41, 1.83, -2.37 )
visible = false
fov = 90.0
far = 1024.0

[node name="camp" type="MeshInstance" parent="carrier"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.844, -0.941 )
mesh = SubResource( 2 )
material/0 = null
script = ExtResource( 4 )

[node name="camera_camp" type="Camera" parent="carrier/camp"]
transform = Transform( 0.5, 0, 0, 0, 0.129409, 0.482963, 0, -0.482963, 0.129409, 0, 2.89, 1.19 )
visible = false

[node name="trees" type="Position3D" parent="carrier/camp"]
editor/display_folded = true

[node name="tree" type="MeshInstance" parent="carrier/camp/trees"]
transform = Transform( 0.29995, 0.005467, 2.17781e-12, -0.005467, 0.29995, 2.3897e-10, 2.1787e-12, -2.3897e-10, 0.3, -2.42537, 0.0168304, 0.460754 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="tree2" type="MeshInstance" parent="carrier/camp/trees"]
transform = Transform( 0.2, 1.3446e-09, -1.04022e-10, -1.3446e-09, 0.19762, -0.0307609, -1.04022e-10, 0.0307609, 0.19762, -2.61543, 0.0168304, 0.769176 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="tree12" type="MeshInstance" parent="carrier/camp/trees"]
transform = Transform( 0.173353, 0.0230116, 0.0985569, -1.3446e-09, 0.29643, -0.0307609, -0.0997437, 0.0399937, 0.17129, -2.42015, 0.0168304, 1.09491 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="tree3" type="MeshInstance" parent="carrier/camp/trees"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -2.43603, 0.0168304, -0.250441 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="tree4" type="MeshInstance" parent="carrier/camp/trees"]
transform = Transform( 0.2, 7.45278e-10, -3.18252e-11, -7.45278e-10, 0.199272, -0.01705, -3.18252e-11, 0.01705, 0.199272, -0.404301, 0.0168304, -0.440712 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="tree5" type="MeshInstance" parent="carrier/camp/trees"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.404301, 0.0168304, -0.440712 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="tree6" type="MeshInstance" parent="carrier/camp/trees"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.770964, 0.0168304, -1.01009 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="tree7" type="MeshInstance" parent="carrier/camp/trees"]
transform = Transform( 0.199353, 0.0160762, 2.82885e-11, -0.0160762, 0.199353, 7.02715e-10, 2.82876e-11, -7.02715e-10, 0.2, 0.603477, 0.0168304, 1.56227 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="tree11" type="MeshInstance" parent="carrier/camp/trees"]
transform = Transform( 0.0122398, 0.000987042, -0.199623, -0.0160762, 0.199353, 7.02715e-10, 0.198977, 0.0160459, 0.0122795, 0.386853, -0.0271797, 1.41108 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="tree9" type="MeshInstance" parent="carrier/camp/trees"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.247555, 0.0253773, 1.56285 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="tree10" type="MeshInstance" parent="carrier/camp/trees"]
transform = Transform( 0.3, -1.38381e-09, -7.32188e-11, 1.38381e-09, 0.298325, 0.0316578, -7.32188e-11, -0.0316578, 0.298325, -0.282763, -0.0316982, 1.66718 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="tree8" type="MeshInstance" parent="carrier/camp/trees"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 2.54222, 0.0168304, 0.295298 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="cursor" parent="carrier/camp" instance=ExtResource( 6 )]
mesh = SubResource( 4 )

[node name="heli" parent="carrier" instance=ExtResource( 7 )]
transform = Transform( -0.072623, 0, -0.186349, 0, 0.2, 0, 0.186349, 0, -0.072623, -3.3, 0.931, -1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="carrier/heli"]
autoplay = "hrli"
anims/hrli = SubResource( 5 )

[node name="pivot" type="Position3D" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
script = ExtResource( 8 )

[node name="camera_drone" type="Camera" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939692, 0, 16, 24 )
current = true
far = 4096.0

[node name="camera_heli" type="Camera" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939692, 0, 128, 12 )
visible = false
fov = 80.0
far = 4096.0

[node name="camera_spyglass" type="Camera" parent="pivot"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16, -8 )
visible = false
fov = 10.0
far = 4096.0

[node name="vidgete" type="MeshInstance" parent="pivot/camera_spyglass"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1.5 )
mesh = SubResource( 7 )
material/0 = null

[node name="camera_satellite" type="Camera" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2048, 64 )
visible = false
environment = SubResource( 10 )
fov = 50.0
far = 4096.0

[node name="compass" type="Sprite3D" parent="camera_satellite"]
transform = Transform( 0.963444, -0.267911, 0, 0.267911, 0.963444, 0, 0, 0, 1, -4, -2.05, -7.91 )
modulate = Color( 1, 1, 1, 0.501961 )
texture = ExtResource( 10 )

[node name="icon" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 32, 0 )
cast_shadow = 0
pixel_size = 2.0
axis = 1
double_sided = false
texture = ExtResource( 11 )

[node name="hit" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.11212, 0 )
draw_pass_1 = SubResource( 12 )

[node name="smoke" parent="." instance=ExtResource( 14 )]

[node name="heli" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 119.03, 0 )

[node name="maszt" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5796, -9.08719 )
mesh = SubResource( 13 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="maszt"]
transform = Transform( -4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, -1, 1, -4.37114e-08, -4.37114e-08, 0, 0.642338, 0.505863 )
mesh = SubResource( 35 )
material/0 = null


[editable path="hit"]
